--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,14 @@
       <scope>runtime</scope>
     </dependency>
 
+   <dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    <version>2.3.0</version>
+</dependency>
+
+
+
     <!-- Caching -->
     <dependency>
       <groupId>javax.cache</groupId>
